[package]
name = "fed2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
anyhow = "1.0.68"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_with = "2.2.0"
uuid = { version = "1.2.2", features = ["serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
tokio = { version = "1.24.1", features = ["rt"] }